# Linux-FileOwl

./: CMakeLists.txt  README.md
src/: file_owl.cpp
